# lijianguo_code

./: Makefile.am  build.sh  build_A53.sh  build_A73.sh  configure.ac  record.cpp  record.h  record_list.h  record_search.c  record_search.h  record_search_debug.c  snapshot.cpp  snapshot.h
mp4muxer-custom/: 264size.txt  265size.txt  CMakeLists.txt  Makefile.am  Mp4Encoder.cpp  Mp4Encoder.h  asize.txt  build.sh  clean.sh  configure.ac  main.cpp
mp4muxer-custom/mp4lib/: CMakeLists.txt  Makefile.am  bits.c  bits.h  libMp2Dec.c  libMp2Dec.h  libmp2enc.c  libmp2enc.h  mp2.h  mp2DecBits.c  mp2DecBits.h  mp2DecMp2.h  mp2DecTypedef.h  mp2tab.h  mp4_encoder.c  mp4_encoder.h  mp4_encoder_h264.c  mp4_encoder_h264.h  mp4_encoder_jpeg.c  mp4_encoder_jpeg.h  mp4_file.c  mp4_file.h  mp4_input_aac.c  mp4_input_aac.h  mp4_input_mp2.c  mp4_input_mp2.h  mp4_pcm_to_mp2.c  mp4_pcm_to_mp2.h  typedef.h
mp4muxer-ffmpeg/: CMakeLists.txt  Makefile.am  jpeg_encoder.cpp  jpeg_encoder.h  main.cpp  mp4_encoder.cpp  mp4_encoder.h
storage/: Makefile  Makefile.am  Makefile.in  storage.c  storage.cpp  storage.h  storage_monitor.c  storage_monitor.cpp
