AUTOMAKE_OPTIONS = foreign
lib_LTLIBRARIES = libmp4.la
libmp4_la_SOURCES = bits.c  libMp2Dec.c  libmp2enc.c  mp2DecBits.c  mp4_encoder.c  mp4_encoder_h264.c\
                mp4_encoder_jpeg.c  mp4_file.c  mp4_input_aac.c  mp4_input_mp2.c  mp4_pcm_to_mp2.c\
                bits.h libmp2enc.h mp2DecMp2.h mp2.h mp4_encoder.h mp4_encoder_jpeg.h mp4_input_aac.h mp4_pcm_to_mp2.h\
                libMp2Dec.h mp2DecBits.h mp2DecTypedef.h mp2tab.h mp4_encoder_h264.h mp4_file.h mp4_input_mp2.h typedef.h

